Add title and intro

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <link rel="stylesheet" href="aui/src/adaptui.css">
     </head>
     <body>
-        
+        <aui-screen id="homepage">
+            <main>
+                <section>
+                    <h1 id="homeHeader">tramcrazy's forms</h1>
+                    <p>This site holds surveys, contact forms and other forms.</p>
+                </section>
+            </main>
+        </aui-screen>
     </body>
 </html>
