--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <main>
                 <section>
                     <h1 id="homeHeader">tramcrazy's forms</h1>
-                    <p>This site holds surveys, contact forms and other forms.</p>
+                    <p>This site holds surveys, contact forms and other forms. Go back to the link I sent you to 😉</p>
                 </section>
             </main>
         </aui-screen>
