--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
         <aui-screen id="homepage">
+            <header>
+                <span>tramcrazy's forms</span>
+            </header>
             <main>
                 <section>
                     <h1 id="homeHeader">tramcrazy's forms</h1>
