Get rid of unnecessary JS because who cares about asynchronosity anyway

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -5,7 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
-        <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
     </head>
     <body>
         <aui-screen id="homepage">
@@ -25,7 +24,7 @@
                         </div>
                         <br>
                         <aui-buttons>
-                            <button id="submitButton" type="submit" class="pageclip-form__submit">Submit</button>
+                            <button id="submitButton" type="submit">Submit</button>
                         </aui-buttons>
                     </form>
                 </section>
