Update label details

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -24,9 +24,9 @@
                         </div>
                         <div>
                             <p>What do you like?</p>
-                            <label for="pizza">Pizza</label>
+                            <label for="likes_pizza">Pizza</label>
                             <input id="likes_pizza" type="checkbox" name="likes[pizza]">
-                            <label for="burgers">Burgers</label>
+                            <label for="likes_burgers">Burgers</label>
                             <input id="likes_burgers" type="checkbox" name="likes[burgers]">
                         </div>
                         <br>
