Add primary display setting

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -25,9 +25,9 @@
                         <div>
                             <p>What do you like?</p>
                             <label for="likes_pizza">Pizza</label>
-                            <input id="likes_pizza" type="checkbox" name="likes[pizza]">
+                            <input id="likes_pizza" type="checkbox" name="likes[pizza]" aui-mode="primary">
                             <label for="likes_burgers">Burgers</label>
-                            <input id="likes_burgers" type="checkbox" name="likes[burgers]">
+                            <input id="likes_burgers" type="checkbox" name="likes[burgers]" aui-mode="primary">
                         </div>
                         <br>
                         <aui-buttons>
