--- a/testsurvey.html
+++ b/testsurvey.html
@@ -14,9 +14,7 @@
             <main>
                 <section>
                     <h1 id="homeHeader">Test Survey</h1>
-                    <p>We like to harvest data yay!</p>
-                </section>
-                <section>
+                    <p>All responses are deleted after a period of time... it's a test after all!</p>
                     <form action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post">
                         <div>
                             <label for="name">What's your name?</label>
