--- a/testsurvey.html
+++ b/testsurvey.html
@@ -18,7 +18,7 @@
                     <form action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post">
                         <div>
                             <label for="name">What's your name?</label>
-                            <input id="name" type="text" name="name">
+                            <input id="name" type="text" name="name" autocomplete="name">
                         </div>
                         <div>
                             <p>What do you like?</p>
