Build initial JS

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -17,7 +17,7 @@
                 <section>
                     <h1 id="homeHeader">Test Survey</h1>
                     <p>All responses are deleted after a period of time... it's a test after all!</p>
-                    <form action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post" class="pageclip-form">
+                    <form action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post" id="mainForm">
                         <div>
                             <label for="name">What's your name?</label>
                             <input id="name" type="text" name="name" autocomplete="name">
