--- a/testsurvey.html
+++ b/testsurvey.html
@@ -31,7 +31,7 @@
                         </div>
                         <br>
                         <aui-buttons>
-                            <button id="submitButton">Submit</button>
+                            <button id="submitButton" class="pageclip-form__submit">Submit</button>
                         </aui-buttons>
                     </form>
                 </section>
