Start to test new submission logic

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -5,7 +5,6 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
-        <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
         <script src="main.js" charset="utf-8"></script>
     </head>
     <body>
@@ -17,7 +16,7 @@
                 <section>
                     <h1 id="homeHeader">Test Survey</h1>
                     <p>All responses are deleted after a period of time... it's a test after all!</p>
-                    <form action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post" id="mainForm">
+                    <form id="mainForm" pageclipname="test-survey">
                         <div>
                             <label for="name">What's your name?</label>
                             <input id="name" type="text" name="name" autocomplete="name">
@@ -31,7 +30,7 @@
                         </div>
                         <br>
                         <aui-buttons>
-                            <button id="submitButton" class="pageclip-form__submit">Submit</button>
+                            <button id="submitButton" type="submit">Submit</button>
                         </aui-buttons>
                     </form>
                 </section>
