Build out form submission logic

--- a/testsurvey.html
+++ b/testsurvey.html
@@ -16,7 +16,7 @@
                 <section>
                     <h1 id="homeHeader">Test Survey</h1>
                     <p>All responses are deleted after a period of time... it's a test after all!</p>
-                    <form id="mainForm" pageclipname="test-survey">
+                    <form id="mainForm" pageclip-name="test-survey">
                         <div>
                             <label for="name">What's your name?</label>
                             <input id="name" type="text" name="name" autocomplete="name">
