Add POST method

--- a/testbasicform.html
+++ b/testbasicform.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <form id="mainForm" pageclip-name="test-survey" action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey">
+        <form id="mainForm" pageclip-name="test-survey" action="https://send.pageclip.co/cjFMs15YG7ofCuKMitQLnI65CCFlggmF/test-survey" method="post">
             <div>
                 <label for="name">What's your name?</label>
                 <input id="name" type="text" name="name" autocomplete="name">
