--- a/f/testsurvey.html
+++ b/f/testsurvey.html
@@ -4,7 +4,7 @@
         <title>Test Survey</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-        <link rel="stylesheet" href="aui/src/adaptui.css">
+        <link rel="stylesheet" href="/aui/src/adaptui.css">
     </head>
     <body>
         <aui-screen id="homepage">
@@ -35,6 +35,6 @@
                 </section>
             </main>
         </aui-screen>
-        <script src="main.js" charset="utf-8"></script>
+        <script src="/main.js" charset="utf-8"></script>
     </body>
 </html>
