--- a/thanks.html
+++ b/thanks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>tramcrazy's forms</title>
+        <title>Thanks! | tramcrazy's forms/title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
@@ -9,7 +9,7 @@
     <body>
         <aui-screen id="homepage">
             <header>
-                <span>tramcrazy's forms</span>
+                <span>Thanks!</span>
             </header>
             <main>
                 <section>
