Finish thank you page

--- a/f/testsurvey.html
+++ b/f/testsurvey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test Survey</title>
+        <title>Test Survey | tramcrazy's forms</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="/aui/src/adaptui.css">
@@ -34,7 +34,10 @@
                     </form>
                 </section>
             </main>
+            <footer>
+                <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
+            </footer>
         </aui-screen>
-        <script src="/main.js" charset="utf-8"></script>
+        <script src="/js/form.js" charset="utf-8"></script>
     </body>
 </html>
