--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <p>This site holds surveys, contact forms and other forms. Go back to the link I sent you to 😉</p>
                 </section>
             </main>
+            <footer>
+                <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
+            </footer>
         </aui-screen>
     </body>
 </html>
