--- a/thanks.html
+++ b/thanks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Thanks! | tramcrazy's forms/title>
+        <title>Thanks! | tramcrazy's forms</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
@@ -9,14 +9,18 @@
     <body>
         <aui-screen id="homepage">
             <header>
-                <span>Thanks!</span>
+                <span id="formName">Thanks!</span>
             </header>
             <main>
                 <section>
-                    <h1 id="homeHeader">tramcrazy's forms</h1>
-                    <p>This site holds surveys, contact forms and other forms. Go back to the link I sent you to 😉</p>
+                    <h1 id="homeHeader">Thank you!</h1>
+                    <p id="thanksText">Thanks for completing the form on tramcrazy's forms. The submission was successful!</p>
                 </section>
             </main>
+            <footer>
+                <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
+            </footer>
         </aui-screen>
+        <script src="/src/thanks.js" charset="utf-8"></script>
     </body>
 </html>
