--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <main>
                 <section>
                     <h1 id="homeHeader">tramcrazy's forms</h1>
-                    <p>This site holds surveys, contact forms and other forms. Go back to the link I sent you to 😉</p>
+                    <p>This site holds surveys, contact forms and other forms I've made. Go back to the link you came from 😉</p>
                 </section>
             </main>
             <footer>
