Update path to JS

--- a/thanks.html
+++ b/thanks.html
@@ -21,6 +21,6 @@
                 <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
             </footer>
         </aui-screen>
-        <script src="/src/thanks.js" charset="utf-8"></script>
+        <script src="/js/thanks.js" charset="utf-8"></script>
     </body>
 </html>
