--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
     </head>
-    <body>
+    <body aui-mode="web">
         <aui-screen id="homepage">
             <header>
                 <span id="formName">Thanks!</span>
