Fix footer again

--- a/f/testsurvey.html
+++ b/f/testsurvey.html
@@ -34,7 +34,7 @@
                     </form>
                 </section>
             </main>
-            <footer>
+            <footer aui-stack="horizontal">
                 <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
             </footer>
         </aui-screen>
