--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p>This site holds surveys, contact forms and other forms I've made. Go back to the link you came from 😉</p>
                 </section>
             </main>
-            <footer>
+            <footer aui-stack="horizontal">
                 <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
             </footer>
         </aui-screen>
