--- a/thanks.html
+++ b/thanks.html
@@ -17,7 +17,7 @@
                     <p id="thanksText">Thanks for completing the form on tramcrazy's forms. The submission was successful!</p>
                 </section>
             </main>
-            <footer>
+            <footer aui-stack="horizontal">
                 <span>Built by <a href="https://link.tramcrazy.com">tramcrazy</a>.</span>
             </footer>
         </aui-screen>
