--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>tramcrazy's forms</title>
+        <title>TramForms</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <link rel="stylesheet" href="aui/src/adaptui.css">
@@ -12,11 +12,11 @@
     </head>
     <body aui-mode="web">
             <header>
-                <span>tramcrazy's forms</span>
+                <span>TramForms</span>
             </header>
             <main>
                 <section>
-                    <h1 id="homeHeader">tramcrazy's forms</h1>
+                    <h1 id="homeHeader">TramForms</h1>
                     <p>This site holds surveys, contact forms and other forms I've made. Go back to the link you came from 😉</p>
                 </section>
             </main>
