--- a/f/testsurvey.html
+++ b/f/testsurvey.html
@@ -26,7 +26,7 @@
                     <form id="mainForm" pageclip-name="test-survey">
                         <div>
                             <label for="name">What's your name?</label>
-                            <input id="name" type="text" name="name" autocomplete="name">
+                            <input id="name" type="text" name="name" autocomplete="name" required>
                         </div>
                         <div>
                             <p>What do you like?</p>
