--- a/f/favelanguage.html
+++ b/f/favelanguage.html
@@ -25,7 +25,7 @@
                     <p>I'm curious... what's your favourite programming language??</p>
                     <form id="mainForm" pageclip-name="FavouriteProgrammingLanguage">
                         <div>
-                            <input id="rad_javascript" type="radio" name="language" value="JavaScript" aui-mode="primary">
+                            <input id="rad_javascript" type="radio" name="language" value="JavaScript" aui-mode="primary" required>
                             <label for="rad_javascript">JavaScript</label>
                             <input id="rad_htmlcss" type="radio" name="language" value="HTML/CSS" aui-mode="primary">
                             <label for="rad_htmlcss">HTML/CSS</label>
